manifests/go-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: default-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: gcr.io/google-samples/gb-frontend:v4 # Placeholder for your Go App
        ports:
        - containerPort: 80
