manifests/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: default-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.0-alpine
        ports:
        - containerPort: 6379
        # MOUNT THE VOLUME HERE
        volumeMounts:
        - name: redis-storage
          mountPath: /data
      # DEFINE THE VOLUME HERE
      volumes:
      - name: redis-storage
        persistentVolumeClaim:
          claimName: redis-data-claim
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: default-app
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
